--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "login",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "firebase": "^8.2.6",
-    "firebaseui": "^4.7.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.1.1"
   }
 }
