--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "firebase": "^8.2.6",
+    "mqtt": "^4.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-webcam": "^5.2.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
