Added zoo page and join page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "firebase": "^8.2.6",
+    "lottie-web": "^5.7.6",
     "mqtt": "^4.2.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-google-button": "^0.7.2",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-webcam": "^5.2.2",
